# DL-RL-Internship

./: .gitignore  README.md  main.py  pyproject.toml
assignments/day 1/: video_games.ipynb
assignments/day 10/: Diffusion Transformers.md
assignments/day 2/: Keras_MNIT_HW.ipynb
assignments/day 3/: NN_HW.ipynb  perceptron.ipynb
assignments/day 4/: Tensorflow_keras_API.ipynb
assignments/day 5/: mnist_dnn_regularization_lr_schedule.ipynb
assignments/day 6/: ResNet_DNN_Fashion_MNIST.ipynb
assignments/day 7/: CIFAR10_CNN_transfer_learning.ipynb  MNIST_CNN.ipynb
assignments/day 8/: RNN_LSTM_GRU.ipynb
assignments/day 9/: autoencode_denoise.ipynb
