[project]
name = "dl-rl-internship"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "jupyterlab>=4.4.3",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.19.0",
]
